<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"

    android:padding="8dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarTrackVertical="@drawable/scrollbar_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="198dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_form" />

            <EditText
                android:id="@+id/et_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitar_nombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitar_correo"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitar_telefono"
                android:inputType="phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitar_contrasena"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_Rcontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digitar_rcontrasena"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Seleccione su genero:"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_Maculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/rb_Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:checked="false"
                    android:text="@string/rb2" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Cuales son tus Hobbies:"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_viajar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_viajar" />

            <CheckBox
                android:id="@+id/cb_leer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_leer" />

            <CheckBox
                android:id="@+id/cb_bailar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_bailar" />

            <CheckBox
                android:id="@+id/cb_cantar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_cantar" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_fecha"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/tvFecha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/hint_fecha"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Lugar de nacimiento:"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/registrar"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_resultado"
                android:textSize="16sp"

                />


        </LinearLayout>


    </ScrollView>


</LinearLayout>